Create a root and view for the movie page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,14 @@
-<h1> {{ message }} </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	{% if title %}
+		<title>{{ title }}</title>
+	{{% else %}}
+		<title> Welcome to the best Movie Review Website</title>
+	{{% endif %}}
+</head>
+<body>
+	
+</body>
+</html>
