--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,8 @@
+{% extends 'base.html' %}
 {% import 'macros.html' as macro %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
 
-	{% if title %}
-        <title> {{ title }}</title>
-    {% else %}
-        <title> Welcome to the best Movie Review website </title>
-    {% endif %}
-
-</head>
-<body>
+<!-- Content Block -->
+{% block content %}
 	<!-- Popular movie section  -->
     <h3>Popular Movies</h3>
     <ul>
@@ -27,5 +18,4 @@
     <ul>
         {{ macro.displayMovieList(now_showing) }}
     </ul>
-</body>
-</html>
+{% endblock %}
