--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -5,7 +5,7 @@
 
     <!-- Poster background -->
     <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath" style="background: url("https://image.tmdb.org/t/p/w500/{{ movie.poster_path }}") no-repeat center center">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath" style="background: url({{ movie.image }}) no-repeat center center; height:400px ">
         </div>
 
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
