--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -2,7 +2,7 @@
 
 	{% for movie in movie_list %}
 		<div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
-            <img src="https://image.tmdb.org/t/p/w500/{}".format({{ movie.poster_path }}) alt="{{ movie.title }} poster" class="img-responsive">
+            <img src="{{movie.image}}" alt="{{ movie.title }} poster" class="img-responsive">
             <li class="text-center">
                 <a href="/movie/{{movie.id}}">
                     {{ movie.title|truncate(10)}}</a>
