--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,12 +1,13 @@
 {% macro displayMovieList(movie_list) %}
 
 	{% for movie in movie_list %}
-		<div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
-            <img src="{{movie.image}}" alt="{{ movie.title }} poster" class="img-responsive">
-            <li class="text-center">
-                <a href="/movie/{{movie.id}}">
-                    {{ movie.title|truncate(10)}}</a>
-            </li>
+		<div class="col-md-2 movie-card" style="display: block;margin: 20px;border: 2px solid #ddd">
+			<a href="/movie/{{movie.id}}">
+	            <img src="{{movie.image}}" height="300px" alt="{{ movie.title }} poster" class="img-responsive">
+	            <li class="text-center">
+	                {{ movie.title|truncate(10)}}
+	            </li>
+       		</a>
         </div>
 	{% endfor %}
 
