Add functionality to display reviews.

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,3 +1,4 @@
+<!-- DISPLAYING MOVIES MACRO -->
 {% macro displayMovieList(movie_list) %}
 
 	{% for movie in movie_list %}
@@ -11,4 +12,14 @@
         </div>
 	{% endfor %}
 
+{% endmacro %}
+
+<!-- DISPLAYING REVIEWS MACRO -->
+{% macro displayReviews(review_list) %}
+	{% for review in review_list %}
+		<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 review-card">
+	        <h2> {{ review.title}} </h2>
+	        <p> {{ review.review | truncate(30) }}</p>
+    	</div>
+    {% endfor %}
 {% endmacro %}
