--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'macros.html' as macro %}
 <!-- Content Block -->
 {% block content %}
 <div class="container">
@@ -13,11 +14,30 @@
 
             <p class="overview"> {{ movie.overview }}</p>
             <p class="ratings"> <b> {{ movie.vote_average }}</b> - <i>{{ movie.vote_count}} votes </i> </p>
-            <a class="ratings" href="/movie/review/new/{{movie.id}}"> Write a new review</a>
+          
 
 
 
         </div>
+    </div>
+     <div class="row">
+
+        <h3>Reviews</h3>
+        <hr />
+
+        {% if reviews %}
+            {{macro.displayReviews(reviews)}}
+
+        {% else%}
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath">
+
+            <h4 class="text-center">This movie has no reviews </h4>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath">
+            <a class="btn btn-success btn-lg text-center" href="/movie/review/new/{{movie.id}}"> Write a new review</a>
+        </div>
+        {% endif %}
+
     </div>
 
 </div>
