--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -4,8 +4,7 @@
 {% block content %}
 <div class="col-md-4">  </div>
 <div class="col-md-8">
-	{{wtf.quick_form(login_form)}}
-	<p> Don't  have an account?  <a href="{{url_for('auth.register')}}">Sign up here</a></p>
+	{{wtf.quick_form(registration_form)}}
 </div>
 
 {% endblock %}
