--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 <!-- Styles Block -->
 {% block styles %}
     {{ super() }}
-    <link rel="stylesheet" href="{{url_for('.static',filename='css/index.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 {% endblock %}
 
 <!-- Content Block -->
