--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -13,7 +13,18 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
             </ul>
-        </div>
+              <ul class="nav navbar-nav navbar-right">
+              {%if current_user.is_authenticated %}
+                <li><a href="">{{current_user.username}}</a></li>
+                <li><a href="{{url_for('auth.logout')}}">Sign Out</a></li>
 
+              {% else %}
+                <li><a href="{{url_for('auth.login')}}">Sign In</a></li>
+                <li><a href="{{url_for('auth.register')}}">Sign Up</a></li>
+
+              {% endif %}
+          </ul>
+        </div>
+       
     </div>
 </div>
