--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -16,6 +16,7 @@
               <ul class="nav navbar-nav navbar-right">
               {%if current_user.is_authenticated %}
                 <li><a href="">{{current_user.username}}</a></li>
+                <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
                 <li><a href="{{url_for('auth.logout')}}">Sign Out</a></li>
 
               {% else %}
