--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -2,11 +2,7 @@
 
 {% block content %}
 <div class="container">	
-	<div>
-		{% if user==current_user %}
-			<a href="{{url_for('main.update_profile',uname=user.username)}}">Edit Profile</a>
-		{% endif %}
-	</div>
+	
 	<div class="row">
 		<!-- displaying username -->
 		<div class="col-md-4">
@@ -18,6 +14,11 @@
 			{% else %}
 				<p>{{user.username | capitalize}} has no bio. </p>
 			{% endif %}
+			<div>
+		{% if user==current_user %}
+			<a href="{{url_for('main.update_profile',uname=user.username)}}">Edit Profile</a>
+		{% endif %}
+	</div>
 		</div>
 		<!-- Displaying profile photo -->
 		<div class="col-md-4">
@@ -25,6 +26,13 @@
 				<img src="{{url_for('static',filename=user.profile_pic_path)}}" alt="" class="img-thumbnail">
 			{% else %}
 				<p>No profile picture.</p>
+			{% endif %}
+
+			{% if user==current_user %}
+			<form action="{{url_for('main.update_pic',uname=user.username)}}" method="post" enctype="multipart/form-data">
+				<input type="file" name="photo" class="form-control" required="required" >
+				<input type="submit">
+			</form>
 			{% endif %}
 		</div>
 	</div>
