Add a simple review editor for the review form. 1. Install flask_simplemde and markdown2. 2. Initialize flask_simplemde in __init__.py. 3. Set up simplemde configs in config.py. 4. Connect the simplemde cdn to the application template. 5. Load the markdown editor in newreview.html. 6. Convert the markdown text into html.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,11 @@
 {% extends 'bootstrap/base.html' %}
 
+{% block styles %}
+	{{super()}}
+	<!-- Importing the simple mde css and js files -->
+	{{ simplemde.css }}
+	{{ simplemde.js }}
+{% endblock %}
 <!-- Navbar Block -->
 {% block navbar %}
 	{% include 'navbar.html' %}
