--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -15,8 +15,7 @@
             </ul>
               <ul class="nav navbar-nav navbar-right">
               {%if current_user.is_authenticated %}
-                <li><a href="">{{current_user.username}}</a></li>
-                <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
+                <li><a href="{{url_for('main.profile',uname=current_user.username)}}">{{current_user.username}}</a></li>
                 <li><a href="{{url_for('auth.logout')}}">Sign Out</a></li>
 
               {% else %}
