--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-4">
-			<img src="{{review.image_path}}" alt="" class="img-responsive">
-		</div>
-		<div class="col-sm-8">
-			<p>{{review.movie_title}}</p>
-			{{format_review|safe}}
-		</div>
-	</div>
-</div>
+<div class="container">
+
+        <div class="col-md-8">
+            <img src="{{review.image_path}}" alt="" class="img-responsive">
+        </div>
+
+        <div class="col-md-4">
+
+            <h4>{{review.movie_title}}</h4>
+			<p>{{format_review|safe}}</p>
+			<p>review by {{review.user.username}}</p>
+        </div>
+
+    </div>
+
 {% endblock %}
